--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>ghostriderjunior</title>
-    <meta name="grj-publishable-key" content="pk_live_51SMbgzCehjiGbIW1Y4ZKFDK0rf0e6mZahGt4Xetbvsv7ZhBUr9hmW2DomhxDAzZNfJV8aHS4q1PiCl62Ba9l6HO3002NYrNYDS" />
+    <meta
+      name="grj-publishable-key"
+      content="pk_live_51SMbgzCehjiGbIW1Y4ZKFDK0rf0e6mZahGt4Xetbvsv7ZhBUr9hmW2DomhxDAzZNfJV8aHS4q1PiCl62Ba9l6HO3002NYrNYDS"
+    />
     <meta name="grj-price-monthly" content="price_1SMqSsCehjiGbIW1aJ1NQ4FG" />
     <meta name="grj-price-onetime" content="price_1SMqT4CehjiGbIW1E351xTFc" />
     <meta name="grj-link-monthly" content="https://buy.stripe.com/cNi4gy4501L1ee59780kE00" />
-    <meta name="grj-link-onetime"  content="https://buy.stripe.com/28E6oGfNI61hee54QS0kE01" />
+    <meta name="grj-link-onetime" content="https://buy.stripe.com/28E6oGfNI61hee54QS0kE01" />
     <meta name="grj-success-url" content="https://ghostriderjunior.com/success" />
-    <meta name="grj-cancel-url"  content="https://ghostriderjunior.com/cancel" />
+    <meta name="grj-cancel-url" content="https://ghostriderjunior.com/cancel" />
     <meta name="grj-admin-password" content="nose" />
     <!-- Tailwind CDN v3 -->
     <script src="https://cdn.tailwindcss.com"></script>
